--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "axios": "^1.4.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-import": "^2.27.5",
     "expo": "~49.0.2",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -23,9 +28,11 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
